# opengl_example

./: CMakeLists.txt  Dependency.cmake  README.md
shader/: lighting.fs  lighting.vs  simple.fs  simple.vs  texture.fs  texture.vs
src/: buffer.cpp  buffer.h  common.cpp  common.h  context.cpp  context.h  image.cpp  image.h  main.cpp  program.cpp  program.h  shader.cpp  shader.h  texture.cpp  texture.h  vertex_layout.cpp  vertex_layout.h
